--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -39,7 +39,6 @@
     "Amount": "Сумма",
     "Category": "Категория",
     "Type": "Тип",
-    "Open": "Открыть",
     "Outcome": "Расход",
     "Income": "Доход",
     "Next": "Вперед",
@@ -51,7 +50,9 @@
     "MinValue": "Минимальное значение: ",
     "SWW": "ЧТо-то пошлоо не так.",
 
-    "Create": "Создать"
+    "Create": "Создать",
+    "Open": "Открыть",
+    "Delete": "Удалить"
 
 
 
